adding some new strings

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Größe</string>
     <string name="last_modified">Änderungsdatum</string>
     <string name="date_taken">Date taken</string>
+    <string name="title">Titel</string>
+    <string name="filename">Dateiname</string>
+    <string name="extension">Dateiendung</string>
     <string name="ascending">Aufsteigend</string>
     <string name="descending">Absteigend</string>
 
