--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Taille</string>
     <string name="last_modified">Dernière modification</string>
     <string name="date_taken">Date prise</string>
+    <string name="title">Title</string>
+    <string name="filename">Filename</string>
+    <string name="extension">Extension</string>
     <string name="ascending">Croissant</string>
     <string name="descending">Décroissant</string>
 
