--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Dimensione</string>
     <string name="last_modified">Ultima modifica</string>
     <string name="date_taken">Data acquisizione</string>
+    <string name="title">Titolo</string>
+    <string name="filename">Nome file</string>
+    <string name="extension">Estensione</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Discendente</string>
 
