--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Размер</string>
     <string name="last_modified">Время изменения</string>
     <string name="date_taken">Время создания</string>
+    <string name="title">Title</string>
+    <string name="filename">Filename</string>
+    <string name="extension">Extension</string>
     <string name="ascending">По возрастанию</string>
     <string name="descending">По убыванию</string>
 
