--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Storlek</string>
     <string name="last_modified">Senast ändrad</string>
     <string name="date_taken">Datum</string>
+    <string name="title">Titel</string>
+    <string name="filename">Filnamn</string>
+    <string name="extension">Filändelse</string>
     <string name="ascending">Stigande</string>
     <string name="descending">Fallande</string>
 
