--- a/commons/src/main/res/values-zh/strings.xml
+++ b/commons/src/main/res/values-zh/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">大小</string>
     <string name="last_modified">Last modified</string>
     <string name="date_taken">Date taken</string>
+    <string name="title">Title</string>
+    <string name="filename">Filename</string>
+    <string name="extension">Extension</string>
     <string name="ascending">递增</string>
     <string name="descending">递减</string>
 
