--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Tamaño</string>
     <string name="last_modified">Last modified</string>
     <string name="date_taken">Date taken</string>
+    <string name="title">Título</string>
+    <string name="filename">Nombre del archivo</string>
+    <string name="extension">Extensión</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
 
