--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">サイズ</string>
     <string name="last_modified">Last modified</string>
     <string name="date_taken">Date taken</string>
+    <string name="title">タイトル</string>
+    <string name="filename">ファイル名</string>
+    <string name="extension">拡張子</string>
     <string name="ascending">昇順</string>
     <string name="descending">降順</string>
 
