--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Tamanho</string>
     <string name="last_modified">Data de modificação</string>
     <string name="date_taken">Data de obtenção</string>
+    <string name="title">Título</string>
+    <string name="filename">Nome do ficheiro</string>
+    <string name="extension">Extensão</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
 
