--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -93,6 +93,9 @@
     <string name="size">Size</string>
     <string name="last_modified">Last modified</string>
     <string name="date_taken">Date taken</string>
+    <string name="title">Title</string>
+    <string name="filename">Filename</string>
+    <string name="extension">Extension</string>
     <string name="ascending">Ascending</string>
     <string name="descending">Descending</string>
 
