adding PhotoView license

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -135,4 +135,5 @@
     <string name="joda_title">Joda-Time (Ersatz für Java Datum)</string>
     <string name="stetho_title">Stetho (Datenbanken debuggen)</string>
     <string name="otto_title">Otto (event bus)</string>
+    <string name="photoview_title">PhotoView (zoomable gifs)</string>
 </resources>
