--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -131,4 +131,5 @@
     <string name="joda_title">Joda-Time (Java dátum helyettesítérére)</string>
     <string name="stetho_title">Stetho (adatbázisok hibakeresésére)</string>
     <string name="otto_title">Otto (event bus)</string>
+    <string name="photoview_title">PhotoView (zoomable gifs)</string>
 </resources>
