--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -135,4 +135,5 @@
     <string name="joda_title">Joda-Time (замена даты Java)</string>
     <string name="stetho_title">Stetho (базы данных отладки)</string>
     <string name="otto_title">Otto ("шина" событий)</string>
+    <string name="photoview_title">PhotoView (zoomable gifs)</string>
 </resources>
