--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -135,4 +135,5 @@
     <string name="joda_title">Joda-Time (sostituto di \"Java date\")</string>
     <string name="stetho_title">Stetho (debug database)</string>
     <string name="otto_title">Otto (bus eventi)</string>
+    <string name="photoview_title">PhotoView (zoomable gifs)</string>
 </resources>
