--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -2,7 +2,6 @@
     <string name="ok">OK</string>
     <string name="cancel">Annulla</string>
     <string name="search">Cerca</string>
-    <string name="invalid_name">Il nome contiene caratteri non validi</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copia</string>
@@ -26,6 +25,13 @@
     <string name="copying_success_partial">Alcuni file non possono essere copiati</string>
     <string name="create_new_directory">Crea una cartella nuova</string>
     <string name="directory_exists">Esiste già una cartella con quel nome</string>
+
+    <!-- Create new folder -->
+    <string name="create_new_folder">Create new folder</string>
+    <string name="name_taken">Directory or file with that name already exists</string>
+    <string name="invalid_name">Il nome contiene caratteri non validi</string>
+    <string name="empty_name">Please enter a name</string>
+    <string name="error_occurred">An unknown error occurred</string>
 
     <!-- Copy conflicts -->
     <string name="file_already_exists">Il file $%1s esiste già</string>
