--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -2,7 +2,6 @@
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="search">Поиск</string>
-    <string name="invalid_name">Имя содержит недопустимые символы</string>
 
     <!-- Copy / Move -->
     <string name="copy">Копировать</string>
@@ -26,6 +25,13 @@
     <string name="copying_success_partial">Некоторые файлы не могут быть скопированы</string>
     <string name="create_new_directory">Создать папку</string>
     <string name="directory_exists">Папка с таким именем уже существует</string>
+
+    <!-- Create new folder -->
+    <string name="create_new_folder">Create new folder</string>
+    <string name="name_taken">Directory or file with that name already exists</string>
+    <string name="invalid_name">Имя содержит недопустимые символы</string>
+    <string name="empty_name">Please enter a name</string>
+    <string name="error_occurred">An unknown error occurred</string>
 
     <!-- Copy conflicts -->
     <string name="file_already_exists">Файл $%1s уже существует</string>
