--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -27,11 +27,11 @@
     <string name="directory_exists">Já existe em diretório com este nome</string>
 
     <!-- Create new folder -->
-    <string name="create_new_folder">Create new folder</string>
-    <string name="name_taken">Directory or file with that name already exists</string>
+    <string name="create_new_folder">Criar nova pasta</string>
+    <string name="name_taken">Já existe um ficheiro ou pasta com este nome</string>
     <string name="invalid_name">O nome contém caracteres inválidos</string>
-    <string name="empty_name">Please enter a name</string>
-    <string name="error_occurred">An unknown error occurred</string>
+    <string name="empty_name">Digite um nome</string>
+    <string name="error_occurred">Ocorreu um erro desconhecido</string>
 
     <!-- Copy conflicts -->
     <string name="file_already_exists">Já existe um ficheiro com o nome $%1s</string>
@@ -136,9 +136,9 @@
     <string name="glide_title">Glide (carregamento e cache de imagens)</string>
     <string name="cropper_title">Android Image Cropper (recorte e rotação de imagens)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (seleção múltipla de itens)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (deslizar à direita/esquerda)</string>
     <string name="joda_title">Joda-Time (sustituto para Java date)</string>
     <string name="stetho_title">Stetho (depuração a bases de dados)</string>
     <string name="otto_title">Otto (canal de eventos)</string>
-    <string name="photoview_title">PhotoView (zoomable gifs)</string>
+    <string name="photoview_title">PhotoView (animação de gifs)</string>
 </resources>
