--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -31,7 +31,7 @@
     <string name="name_taken">Directory or file with that name already exists</string>
     <string name="invalid_name">名前に無効な文字が含まれています</string>
     <string name="empty_name">Please enter a name</string>
-    <string name="error_occurred">An unknown error occurred</string>
+    <string name="unknown_error_occurred">不明なエラーが発生しました</string>
 
     <!-- Copy conflicts -->
     <string name="file_already_exists">File $%1s already exists</string>
