--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -67,6 +67,10 @@
     <string name="duration">Dauer</string>
     <string name="artist">Künstler</string>
     <string name="album">Album</string>
+    <string name="focal_length">Focal length</string>
+    <string name="exposure_time">Exposure time</string>
+    <string name="iso_speed">ISO speed</string>
+    <string name="f_number">F-number</string>
 
     <!-- Color customization -->
     <string name="background_color">Hintergrundfarbe</string>
