--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -68,6 +68,10 @@
     <string name="duration">Durée</string>
     <string name="artist">Artiste</string>
     <string name="album">Album</string>
+    <string name="focal_length">Focal length</string>
+    <string name="exposure_time">Exposure time</string>
+    <string name="iso_speed">ISO speed</string>
+    <string name="f_number">F-number</string>
 
     <!-- Color customization -->
     <string name="background_color">Couleur d\'arrière-plan</string>
