--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -68,6 +68,10 @@
     <string name="duration">Длительность</string>
     <string name="artist">Исполнитель</string>
     <string name="album">Альбом</string>
+    <string name="focal_length">Focal length</string>
+    <string name="exposure_time">Exposure time</string>
+    <string name="iso_speed">ISO speed</string>
+    <string name="f_number">F-number</string>
 
     <!-- Color customization -->
     <string name="background_color">Цвет фона</string>
