update German translation

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -38,7 +38,7 @@
     <string name="select_an_action">Aktion auswählen</string>
     <string name="overwrite">Überschreiben</string>
     <string name="skip">Überspringen</string>
-    <string name="append">Append with \'_1\'</string>
+    <string name="append">\'_1\' anfügen</string>
     <string name="apply_to_all">Bei allen Konflikten anwenden</string>
 
     <!-- File picker -->
@@ -79,7 +79,7 @@
     <string name="primary_color">Primäre Farbe</string>
     <string name="light_theme">Helles Thema</string>
     <string name="dark_theme">Dunkles Thema</string>
-    <string name="custom">Custom</string>
+    <string name="custom">Benutzerdefiniert</string>
     <string name="save">Speichern</string>
     <string name="discard">Verwerfen</string>
     <string name="undo_changes">Änderungen rückgängig machen</string>
