add a button for restoring default colors

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -77,6 +77,7 @@
     <string name="background_color">Hintergrundfarbe</string>
     <string name="text_color">Schriftfarbe</string>
     <string name="primary_color">Primäre Farbe</string>
+    <string name="restore_defaults">Restore defaults</string>
     <string name="light_theme">Helles Thema</string>
     <string name="dark_theme">Dunkles Thema</string>
     <string name="custom">Benutzerdefiniert</string>
