--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="background_color">Background color</string>
     <string name="text_color">Text color</string>
     <string name="primary_color">Primary color</string>
+    <string name="restore_defaults">Restore defaults</string>
     <string name="light_theme">Light theme</string>
     <string name="dark_theme">Dark theme</string>
     <string name="custom">Custom</string>
