--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -4,47 +4,47 @@
     <string name="search">Search</string>
 
     <!-- Copy / Move -->
-    <string name="copy">Copy</string>
-    <string name="move">Move</string>
-    <string name="copy_move">Copy / Move</string>
-    <string name="source">Source</string>
-    <string name="destination">Destination</string>
-    <string name="select_destination">Select destination</string>
-    <string name="click_select_destination">Click here to select destination</string>
-    <string name="invalid_destination">Could not write to the selected destination</string>
-    <string name="please_select_destination">Please select a destination</string>
-    <string name="source_and_destination_same">Source and destination cannot be the same</string>
-    <string name="copy_failed">Could not copy the files</string>
-    <string name="copying">Copying&#8230;</string>
-    <string name="copying_success">Files copied successfully</string>
-    <string name="copy_move_failed">An error occurred</string>
-    <string name="moving">Moving&#8230;</string>
-    <string name="moving_success">Files moved successfully</string>
-    <string name="file_exists">A file with that name already exists</string>
-    <string name="moving_success_partial">Some files could not be moved</string>
-    <string name="copying_success_partial">Some files could not be copied</string>
-    <string name="create_new_directory">Create new directory</string>
-    <string name="directory_exists">A directory with that name already exists</string>
+    <string name="copy">Copiar</string>
+    <string name="move">Mover</string>
+    <string name="copy_move">Copiar / Mover</string>
+    <string name="source">Origen</string>
+    <string name="destination">Destino</string>
+    <string name="select_destination">Seleccionar destino</string>
+    <string name="click_select_destination">Pulsa aquí para elegir el destino</string>
+    <string name="invalid_destination">No se pudo escribir en el destino elegido</string>
+    <string name="please_select_destination">Por favor elige un destino</string>
+    <string name="source_and_destination_same">Origen y destino no pueden coincidir</string>
+    <string name="copy_failed">No se pudo copiar los archivos</string>
+    <string name="copying">Copiando&#8230;</string>
+    <string name="copying_success">Archivos copiados correctamente</string>
+    <string name="copy_move_failed">Un error ocurrió</string>
+    <string name="moving">Moviendo&#8230;</string>
+    <string name="moving_success">Archivos movidos correctamente</string>
+    <string name="file_exists">Ya existe un archivo con el mismo nombre</string>
+    <string name="moving_success_partial">Algunos archivos no se pudieron mover</string>
+    <string name="copying_success_partial">Algunos archivos no se pudieron copiar</string>
+    <string name="create_new_directory">Crear nueva carpeta</string>
+    <string name="directory_exists">Ya existe una carpeta con ese nombre</string>
 
     <!-- Create new folder -->
-    <string name="create_new_folder">Create new folder</string>
-    <string name="name_taken">Directory or file with that name already exists</string>
-    <string name="invalid_name">The name contains invalid characters</string>
-    <string name="empty_name">Please enter a name</string>
+    <string name="create_new_folder">Crear nueva carpeta</string>
+    <string name="name_taken">Un archivo o carpeta ya existe con ese nombre</string>
+    <string name="invalid_name">El nombre contiene carácteres inválidos</string>
+    <string name="empty_name">Por favor introduce un nombre</string>
     <string name="unknown_error_occurred">Ocurrió un error desconocido</string>
 
     <!-- Copy conflicts -->
-    <string name="file_already_exists">File $%1s already exists</string>
-    <string name="select_an_action">Select an action</string>
-    <string name="overwrite">Overwrite</string>
-    <string name="skip">Skip</string>
-    <string name="append">Append with \'_1\'</string>
-    <string name="apply_to_all">Apply to all conflicts</string>
+    <string name="file_already_exists">El archivo $%1s ya existe</string>
+    <string name="select_an_action">Elige una opción</string>
+    <string name="overwrite">Sobreescribir</string>
+    <string name="skip">Saltar</string>
+    <string name="append">Añadir \'_1\'</string>
+    <string name="apply_to_all">Aplicar a todo</string>
 
     <!-- File picker -->
     <string name="select_folder">Seleccione una carpeta</string>
     <string name="select_file">Seleccione un archivo</string>
-    <string name="confirm_storage_access_title">Confirmación de acceso al almacenamiento externo</string>
+    <string name="confirm_storage_access_title">Permita el acceso al almacenamiento externo</string>
     <string name="confirm_storage_access_text">Por favor, elija la carpeta raíz de la tarjeta SD en la próxima pantalla para conceder el acceso de escritura</string>
 
     <plurals name="items">
@@ -74,18 +74,18 @@
     <string name="f_number">F-number</string>
 
     <!-- Color customization -->
-    <string name="background_color">Background color</string>
-    <string name="text_color">Text color</string>
-    <string name="primary_color">Primary color</string>
-    <string name="restore_defaults">Restore defaults</string>
-    <string name="light_theme">Light theme</string>
-    <string name="dark_theme">Dark theme</string>
-    <string name="custom">Custom</string>
-    <string name="save">Save</string>
-    <string name="discard">Discard</string>
-    <string name="undo_changes">Undo changes</string>
-    <string name="undo_changes_confirmation">Are you sure you want to undo your changes?</string>
-    <string name="save_before_closing">You have unsaved changes. Save before exit?</string>
+    <string name="background_color">Color del fondo</string>
+    <string name="text_color">Color del texto</string>
+    <string name="primary_color">Color principal</string>
+    <string name="restore_defaults">Valores por defecto</string>
+    <string name="light_theme">Tema suave</string>
+    <string name="dark_theme">Tema oscuro</string>
+    <string name="custom">Customizado</string>
+    <string name="save">Guardar</string>
+    <string name="discard">Deshacer</string>
+    <string name="undo_changes">Deshacer cambios</string>
+    <string name="undo_changes_confirmation">¿Seguro que quieres deshacer los cambios?</string>
+    <string name="save_before_closing">Tienes cambios sin aplicar. ¿Guardar antes de salir?</string>
 
     <!-- What's new -->
     <string name="whats_new">What\'s new</string>
@@ -95,15 +95,15 @@
     <string name="delete">Eliminar</string>
     <string name="rename">Renombrar</string>
     <string name="share">Compartir</string>
-    <string name="share_via">Compartir vía</string>
+    <string name="share_via">Compartir con</string>
     <string name="select_all">Select all</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
     <string name="name">Nombre</string>
     <string name="size">Tamaño</string>
-    <string name="last_modified">Last modified</string>
-    <string name="date_taken">Date taken</string>
+    <string name="last_modified">Modificación</string>
+    <string name="date_taken">Creación</string>
     <string name="title">Título</string>
     <string name="filename">Nombre del archivo</string>
     <string name="extension">Extensión</string>
@@ -116,20 +116,20 @@
     <string name="no">No</string>
 
     <!-- Settings -->
-    <string name="settings">Settings</string>
-    <string name="customize_colors">Customize colors</string>
+    <string name="settings">Ajustes</string>
+    <string name="customize_colors">Cambiar colores</string>
 
     <!-- About -->
     <string name="about">Acerca de</string>
     <string name="website_label">Más aplicaciones sencillas y código fuente en</string>
     <string name="email_label">Envía tus comentarios o sugerencias a</string>
-    <string name="more_apps_underlined"><u>More apps</u></string>
+    <string name="more_apps_underlined"><u>Más aplicaciones</u></string>
     <string name="third_party_licences_underlined"><u>Licencias de terceros</u></string>
     <string name="invite_friends_underlined"><u>Invitar a amigos</u></string>
     <string name="share_text">Hola, ven y mira %1$s en %2$s</string>
-    <string name="invite_via">Invitar vía</string>
+    <string name="invite_via">Invitar con</string>
     <string name="rate_us_underlined"><u>Vótanos en Play Store</u></string>
-    <string name="donate_underlined"><u>Donate</u></string>
+    <string name="donate_underlined"><u>Donar</u></string>
     <string name="follow_us">Síguenos:</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
 
