add a new string for Theme

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -78,6 +78,7 @@
     <string name="text_color">Schriftfarbe</string>
     <string name="primary_color">Primäre Farbe</string>
     <string name="restore_defaults">Standard wiederherstellen</string>
+    <string name="theme">Theme</string>
     <string name="light_theme">Helles Thema</string>
     <string name="dark_theme">Dunkles Thema</string>
     <string name="custom">Benutzerdefiniert</string>
