--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -78,6 +78,7 @@
     <string name="text_color">Color del texto</string>
     <string name="primary_color">Color principal</string>
     <string name="restore_defaults">Valores por defecto</string>
+    <string name="theme">Theme</string>
     <string name="light_theme">Tema suave</string>
     <string name="dark_theme">Tema oscuro</string>
     <string name="custom">Customizado</string>
