--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -78,6 +78,7 @@
     <string name="text_color">Couleur du texte</string>
     <string name="primary_color">Couleur primaire</string>
     <string name="restore_defaults">Restore defaults</string>
+    <string name="theme">Theme</string>
     <string name="light_theme">Thème lumineux</string>
     <string name="dark_theme">Thème sombre</string>
     <string name="custom">Personnalisé</string>
