--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -78,6 +78,7 @@
     <string name="text_color">Colore del testo</string>
     <string name="primary_color">Colore primario</string>
     <string name="restore_defaults">Restore defaults</string>
+    <string name="theme">Theme</string>
     <string name="light_theme">Tema chiaro</string>
     <string name="dark_theme">Tema scuro</string>
     <string name="custom">Personale</string>
