--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -78,6 +78,7 @@
     <string name="text_color">Text color</string>
     <string name="primary_color">Primary color</string>
     <string name="restore_defaults">Restore defaults</string>
+    <string name="theme">Theme</string>
     <string name="light_theme">Light theme</string>
     <string name="dark_theme">Dark theme</string>
     <string name="custom">Custom</string>
