fix a french typo

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -112,7 +112,7 @@
     <string name="descending">Décroissant</string>
 
     <!-- Confirmation dialog -->
-    <string name="proceed_with_deletion">Etes-vous sûr de voulois effectuer la suppression ?</string>
+    <string name="proceed_with_deletion">Etes-vous sûr de vouloir effectuer la suppression ?</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
 
