--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -78,7 +78,7 @@
     <string name="text_color">Cor do tipo de letra</string>
     <string name="primary_color">Cor primária</string>
     <string name="restore_defaults">Restaurar predefinições</string>
-    <string name="theme">Theme</string>
+    <string name="theme">Tema</string>
     <string name="light_theme">Tema claro</string>
     <string name="dark_theme">Tema escuro</string>
     <string name="custom">Personalizado</string>
