--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -78,7 +78,7 @@
     <string name="text_color">Цвет текста</string>
     <string name="primary_color">Основной цвет</string>
     <string name="restore_defaults">Сбросить к стандартным</string>
-    <string name="theme">Theme</string>
+    <string name="theme">Тема</string>
     <string name="light_theme">Светлая тема</string>
     <string name="dark_theme">Тёмная тема</string>
     <string name="custom">Настраиваемое</string>
@@ -105,7 +105,7 @@
     <string name="size">Размер</string>
     <string name="last_modified">Время изменения</string>
     <string name="date_taken">Время создания</string>
-    <string name="title">Title</string>
+    <string name="title">Название</string>
     <string name="filename">Имя файла</string>
     <string name="extension">Расширение</string>
     <string name="ascending">По возрастанию</string>
