add a string for applying sorting only to one file

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -110,6 +110,7 @@
     <string name="extension">Extensión</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">¿Está seguro de querer continuar con la eliminación?</string>
