--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -110,6 +110,7 @@
     <string name="extension">Extension</string>
     <string name="ascending">Croissant</string>
     <string name="descending">Décroissant</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Etes-vous sûr de vouloir effectuer la suppression ?</string>
