--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -110,6 +110,7 @@
     <string name="extension">拡張子</string>
     <string name="ascending">昇順</string>
     <string name="descending">降順</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">削除を続行してもよろしいですか?</string>
