--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -110,6 +110,7 @@
     <string name="extension">Dateiendung</string>
     <string name="ascending">Aufsteigend</string>
     <string name="descending">Absteigend</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Möchtest du mit dem Löschen fortfahren?</string>
