--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -110,6 +110,7 @@
     <string name="extension">Расширение</string>
     <string name="ascending">По возрастанию</string>
     <string name="descending">По убыванию</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Действительно хотите удалить?</string>
