--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -111,6 +111,7 @@
     <string name="extension">Prípony</string>
     <string name="ascending">Vzostupne</string>
     <string name="descending">Klesajúco</string>
+    <string name="use_for_this_folder">Použiť iba pre tento priečinok</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ste si istý, že chcete pokračovať s vymazaním?</string>
