--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -110,6 +110,7 @@
     <string name="extension">Filändelse</string>
     <string name="ascending">Stigande</string>
     <string name="descending">Fallande</string>
+    <string name="use_for_this_folder">Use for this folder only</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Är du säker på att du vill ta bort detta?</string>
